--- a/index.html
+++ b/index.html
@@ -993,7 +993,7 @@
           {
             id: 13,
             name: {
-              kh: "ការហេ្វទឹកគោទឹកកក",
+              kh: "ការហ្វេទឹកដោះគោទឹកកក",
               en: "Iced Milk Coffee",
               zh: "冰牛奶咖啡",
               py: "bīng niúnǎi kāfēi",
